fix: Text align on div elements of fixed-options

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -128,7 +128,7 @@
       word-break: break-word;
       display: flex;
 
-      span {
+      div, span {
         width: 100%;
         text-align: center;
       }
